update script source for layout web component in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="https://pruebasassets.portaloas.udistrital.edu.co/web-components.js" defer=""></script>  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <script src="https://pruebasassets.portaloas.udistrital.edu.co/layout-web-component.js" defer=""></script>  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
